committing index page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce</title>
     <link rel="stylesheet" href="/css/style.css">
-    <!-- <link rel="stylesheet" href="/home/sandrabest/source/swe-class/html/newecommerce/css/style.css"> -->
 </head>
 <body>
     <div class="parentdiv">
@@ -58,9 +57,28 @@
                     <div class="dollar">
                         <p>$125.00  <br> <span>$250.00</span></p>
                     </div>
-                    <div class="p%"></div>
+                    <div class="percentage">
+                        <p>50%</p>
+                    </div>
                 </div>
-                <div class="divfive"></div>
+                <div class="divfive">
+                    <div class="ato">
+                        <div class="minus">
+                            <p>-</p>
+                        </div>
+                        <div class="zero">
+                            <p>0</p>
+                        </div>
+                        <div class="plus">
+                            <p>+</p>
+                        </div>
+                    </div>
+                    <div class="basket">
+                        <div class="basket1">
+                            <img src="/image/icon-cart.svg" >
+                        </div>
+                        <div class="addcart"><p>Add to cart</p></div>
+                    </div>                </div>
             </div>
         </div>
     </div>
